--- a/web.css
+++ b/web.css
@@ -1,67 +1,80 @@
-h1{
+h1 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-size: xx-large;
-    text-transform:uppercase;
+    text-transform: uppercase;
     color: yellow;
     background-color: black;
     height: 50px;
     padding: 20px;
-
+    width: 100%;
+    background-image: url(img/image.png);
 }
-h4{
+
+h4 {
     text-align: center;
     color: crimson;
     font-family: 'Times New Roman', Times, serif;
 }
-nav{
+
+.nav {
     display: flex;
     justify-content: center;
     gap: 50px;
-    
+
 }
-nav a{
+
+nav a {
     color: blue;
     text-transform: uppercase;
     font-family: 'Times New Roman', Times, serif;
 
 }
-.home{
+
+.home {
     font-family: 'Times New Roman', Times, serif;
-    font-size:x-large;
+    font-size: x-large;
     font-style: italic;
     text-transform: lowercase;
     color: black;
     text-align: center;
 
 }
-.brand img{
+
+.brand img {
     width: 200px;
     margin: auto;
     display: flex;
     align-items: center;
     border-radius: 5px;
 }
-.footer h3{
+
+.footer h3 {
     text-align: center;
     text-transform: lowercase;
-text-decoration:underline;
+    text-decoration: underline;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: small;
     padding: 20px;
     color: black;
     background-color: darkslategrey;
 }
-.pant img{
-        width: 200px;
+
+.pant img {
+    width: 200px;
     margin: auto;
     display: flex;
     align-items: center;
 
 }
 
-@media (max-width:480px){
-    body{
-        background-color:aliceblue;
+@media(max-width:480px) {
+    body {
+        background-color: beige;
+    }
+
+    .nav {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
